# hidy-depth-profile

./: .gitignore  pyproject.toml
examples/: leesferry_sand6.yaml
hidy_depth_profile/: __init__.py  _numba.py  forward.py  inversion.py  io.py  joint_simulator.py  phase_chrono.py  plotting.py  production.py  settings.py  simulator.py  terrace_chrono.py  yaml_io.py
tests/: test_constraints.py  test_forward.py  test_joint_simulator.py  test_leesferry.py  test_phase_chrono.py  test_production.py
